# comic-fmt

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
cli/: common.py  entry.py
cli/commands/: cbz.py  pages.py  rename.py  search.py  uncompress.py
lib/comics/: __init__.py  archive.py  comic.py  handler.py  utils.py
tests/: archive_test.py  comic_test.py  handler_test.py  utils_test.py
