[tool.poetry]
name = "comic-fmt"
version = "0.1.0"
description = "Manage file archives for comic books."
authors = ["Shahryar Rashid <code@srashid3.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "cli" },
  { include = "comics", from = "lib" }
]

[tool.poetry.scripts]
comic-fmt = "cli.entry:entry"

[tool.poetry.dependencies]
python = "^3.10"
unrar = "^0.4"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pyfakefs = "^5.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
